Change tickets controller (scope), helpers Changed comment status based on last comment owner

--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -7,7 +7,7 @@
     <div class="header">
       <h2 class="comments_area_header">
         <span>
-            <%= @ticket.owner_name(@ticket.support_id).upcase %>, UUID: <%= @ticket.uuid %>
+            <%= @ticket.current_support.upcase %>, UUID: <%= @ticket.uuid %>
         </span>
       </h2>
 
