--- a/app/views/tickets/_table_row.html.erb
+++ b/app/views/tickets/_table_row.html.erb
@@ -6,7 +6,7 @@
   <!--<td><%#= h ticket.email %></td>-->
   <td><%= h ticket.subject %></td>
 
-  <% if self.action_name == 'index' %>
+  <%# if self.action_name == 'index' %>
       <td><%= h ticket.problem %></td>
 
       <td align='center'><%= link_to image_tag('show-icon.png'), ticket_path(ticket) %></td>
@@ -15,5 +15,5 @@
       <% if admin? %>
         <td align='center'><%= link_to image_tag('delete-trash.png'), ticket_path(ticket), method: :delete, data: {confirm: 'Are you sure?'} %></td>
       <% end %>
-  <% end %>
+  <%# end %>
 </tr>
