--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -22,61 +22,28 @@
 
 <% content_for :thead do %>
     <thead>
-    <tr> <th>UUID</th> <th>State</th> <th>Owner</th>
-      <!--<th>Username</th> <th>E-mail</th>-->
-      <th>Subject</th> <th>Problem</th> <th colspan='3'>Actions</th> </tr>
+    <tr>
+      <th>UUID</th>
+      <th>State</th>
+      <th>Owner</th>
+      <th>Subject</th>
+      <th>Problem</th>
+      <th colspan='3'>Actions</th>
+    </tr>
     </thead>
 <% end %>
 
-<div class="cell">
-  <header>
-    <span class="header_text">LT [unassigned]</span>
-    <span class='expand_button'><%= link_to '', '#' %></span>
-  </header>
+<% @ids.each_with_index do |val, index| %>
+    <div class="cell">
+      <header>
+        <span class="header_text"><%= @cell_headers[index] %></span>
+        <span class='expand_button'><%= link_to '', '#' %></span>
+      </header>
 
-  <table>
-    <%= yield :thead %>
+      <table>
+        <%= yield :thead %>
 
-    <tbody> <%= render partial: 'tickets/table_row', collection: unassigned, as: :ticket %> </tbody>
-  </table>
-</div>
-
-<div class="cell">
-  <header>
-    <span class="header_text">RT [opened]</span>
-    <span class='expand_button'><%= link_to '', '#' %></span>
-  </header>
-
-  <table>
-    <%= yield :thead %>
-
-    <tbody> <%= render partial: 'tickets/table_row', collection: opened, as: :ticket %> </tbody>
-  </table>
-</div>
-
-<div class="cell">
-  <header>
-    <span class="header_text">LB [on hold]</span>
-    <span class='expand_button'><%= link_to '', '#' %></span>
-  </header>
-
-  <table>
-    <thead>
-    <%= yield :thead %>
-
-    <tbody> <%= render partial: 'tickets/table_row', collection: onhold, as: :ticket %> </tbody>
-  </table>
-</div>
-
-<div class="cell">
-  <header>
-    <span class="header_text">RB [closed]</span>
-    <span class='expand_button'><%= link_to '', '#' %></span>
-  </header>
-
-  <table>
-    <%= yield :thead %>
-
-    <tbody> <%= render partial: 'tickets/table_row', collection: closed, as: :ticket %> </tbody>
-  </table>
-</div>
+        <tbody><%= render partial: 'tickets/table_row', collection: Ticket.states(val), as: :ticket %></tbody>
+      </table>
+    </div>
+<% end %>
