Add tabs controller that can help make dynamically changed sets of states for tickets cell

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,7 @@
               <li><%= link_to 'Supports', controller: 'supports' %></li>
               <li><%= link_to 'Roles', controller: 'roles' %></li>
               <li><%= link_to 'States', controller: 'ticket_states' %></li>
+              <li><%= link_to 'Tabs', controller: 'tabs' %></li>
           <% end %>
       <% else %>
           <li><%= link_to 'Home', '/' %></li>
