--- a/app/views/ticket_states/index.html.erb
+++ b/app/views/ticket_states/index.html.erb
@@ -13,14 +13,14 @@
 <table>
   <thead>
   <tr>
-    <th width=50%>Name</th>
+    <th width=80%>Name</th>
     <th colspan='3'>Actions</th>
   </tr>
   </thead>
 
   <tbody>
   <% @ticket_states.each do |ticket_state| %>
-      <tr class="<%= cycle('even', 'odd') %>">
+      <tr class='<%= cycle('even', 'odd') %>'>
         <td><%= ticket_state.name %></td>
 
         <td align='center'><%= link_to image_tag('edit-icon.png'), edit_ticket_state_path(ticket_state) %></td>
