--- a/app/views/tabs/edit.html.erb
+++ b/app/views/tabs/edit.html.erb
@@ -5,7 +5,7 @@
 <%= form_for(@tab) do |f| %>
     <% if @tab.errors.any? %>
         <div id="error_explanation">
-          <h2><%= pluralize(@tab.errors.count, 'error') %> prohibited this tab from being saved:</h2>
+          <h2><%= pluralize(@tab.errors.count, "error") %> prohibited this tab from being saved:</h2>
 
           <ul>
             <% @tab.errors.full_messages.each do |message| %>
@@ -32,12 +32,10 @@
         </td>
 
         <td align="left" style="padding-left: 20px;">
-          <%#= f.collection_check_boxes :states, @states, :id, :name, include_blank: false, selected: f.states do |b| %>
-            <span>
-              <%#= b.check_box %>
-              <%#= b.label %><br>
-            </span>
-          <%# end %>
+          <%= f.collection_check_boxes :states, @all_states, :id, :name, include_blank: false, :checked => @tab.states do |b| %>
+              <%= b.check_box %>
+              <%= b.label %><br>
+          <% end %>
         </td>
       </tr>
 
