Redesign tabs#edit to use 'form' Modify css to show more than 4 views when added new tabs with states

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -4,6 +4,9 @@ header#page_header {
   height: 68px;
   overflow: hidden;
   padding: 10px 20px;
+  position: fixed;
+  top: 0;
+  width: calc(100% - 40px);
 
   a,
   a:link,
