--- a/app/views/tabs/edit.html.erb
+++ b/app/views/tabs/edit.html.erb
@@ -2,48 +2,4 @@
     Edit tab:
 <% end %>
 
-<%= form_for(@tab) do |f| %>
-    <% if @tab.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@tab.errors.count, "error") %> prohibited this tab from being saved:</h2>
-
-          <ul>
-            <% @tab.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-          </ul>
-        </div>
-    <% end %>
-
-    <table style="border-collapse: collapse;">
-      <tr bgcolor="#faebd7" style="height: 30px;">
-        <td align="right" style="font-weight: bold;">
-          <%= f.label :name %>
-        </td>
-
-        <td align="left" style="padding-left: 20px;">
-          <%= f.text_field :name, size: 40 %>
-        </td>
-      </tr>
-
-      <tr bgcolor="#faebd7" style="height: 30px;">
-        <td align="right" style="font-weight: bold;">
-          <%= f.label :states %>
-        </td>
-
-        <td align="left" style="padding-left: 20px;">
-          <%= f.collection_check_boxes :states, @all_states, :id, :name, include_blank: false, :checked => @tab.states do |b| %>
-              <%= b.check_box %>
-              <%= b.label %><br>
-          <% end %>
-        </td>
-      </tr>
-
-      <tr bgcolor="#deb887" style="height: 30px">
-        <td></td>
-        <td align="right" style="padding-right: 20px">
-          <%= f.submit %>
-        </td>
-      </tr>
-    </table>
-<% end %>
+<%= render 'form' %>
