--- a/app/views/tabs/index.html.erb
+++ b/app/views/tabs/index.html.erb
@@ -13,9 +13,9 @@
 <table>
   <thead>
   <tr>
-    <th width=20%>Name</th>
-    <th width=70%>States</th>
-    <th colspan='3'>Actions</th>
+    <th width=30%>Name</th>
+    <th width=60%>States</th>
+    <th colspan='2'>Actions</th>
   </tr>
   </thead>
 
@@ -25,7 +25,7 @@
         <td><%= raw tab.name %></td>
         <td>
           <% tab.states.each do |val| %>
-              <%= @states[val.to_i-1].name %><br>
+              <%= @ticket_states[val.to_i-1].name %><br>
           <% end %>
         </td>
 
