--- a/app/assets/stylesheets/tickets.css.scss
+++ b/app/assets/stylesheets/tickets.css.scss
@@ -31,12 +31,16 @@ $bgcolor: #806a2e;
 $lh: 30px;
 
 .cell header {
+  width: inherit;
   clear: both;
   background-color: #373737;
   color: darkorange;
   line-height: $lh;
-  position: relative;
-  top: 0px;
+  position: fixed;
+}
+
+.cell table {
+  margin-top: $lh;
 }
 
 header .header_text {
@@ -65,3 +69,15 @@ header .header_text {
   }
 }
 
+.tab {
+  overflow: auto;
+  float: left;
+  width: 100%;
+}
+
+.tab header {
+  width: inherit;
+  background-color: #373737;
+  color: darkorange;
+  line-height: $lh;
+}
