Added show option for the tab to possibility turn on/off tabs that showing on ticket#index

--- a/app/views/tabs/_form.html.erb
+++ b/app/views/tabs/_form.html.erb
@@ -24,6 +24,16 @@
 
       <tr bgcolor="#faebd7" style="height: 30px;">
         <td align="right" style="font-weight: bold;">
+          <%= f.label :show %>
+        </td>
+
+        <td align="left" style="padding-left: 20px;">
+          <%= f.check_box :show %>
+        </td>
+      </tr>
+
+      <tr bgcolor="#faebd7" style="height: 30px;">
+        <td align="right" style="font-weight: bold;">
           <%= f.label :states %>
         </td>
 
