Start working with ajax in new branch

--- a/app/views/supports/new.html.erb
+++ b/app/views/supports/new.html.erb
@@ -1,3 +1,7 @@
+<script type="text/javascript" charset="utf-8">
+    setMainHeight();
+</script>
+
 <%= header_data do %>
     New support user:
 <% end %>
