--- a/app/views/ticket_states/_form.html.erb
+++ b/app/views/ticket_states/_form.html.erb
@@ -1,3 +1,7 @@
+<script type="text/javascript" charset="utf-8">
+    setMainHeight();
+</script>
+
 <%= form_for(@ticket_state) do |f| %>
     <% if @ticket_state.errors.any? %>
         <div id='error_explanation'>
