--- a/app/views/roles/_form.html.erb
+++ b/app/views/roles/_form.html.erb
@@ -1,3 +1,7 @@
+<script type="text/javascript" charset="utf-8">
+    setMainHeight();
+</script>
+
 <%= form_for(@role) do |f| %>
     <% if @role.errors.any? %>
         <div id='error_explanation'>
