--- a/app/views/supports/_table_row.html.erb
+++ b/app/views/supports/_table_row.html.erb
@@ -2,7 +2,8 @@
   <td><%= h support.login %></td>
   <%# if admin? do %>
     <td>
-      <%= link_to image_tag('password-icon-16.png'), change_password_support_path(support) %>
+      <%#= link_to image_tag('password-icon-16.png'), change_password_support_path(support) %>
+      <%= link_to image_tag('password-icon-16.png'), change_password_support_path(support), remote: true %>
       <span><%= h support.password %></span>
     </td>
   <%# end %>
