--- a/app/views/supports/edit.html.erb
+++ b/app/views/supports/edit.html.erb
@@ -1,3 +1,7 @@
+<script type="text/javascript" charset="utf-8">
+    setMainHeight();
+</script>
+
 <%= header_data do %>
     Edit support user:
     <%= link_to image_tag('password-icon-24.png'), change_password_support_path, class: 'button' %>
