--- a/app/views/supports/index.html.erb
+++ b/app/views/supports/index.html.erb
@@ -1,32 +1,4 @@
-<script type="text/javascript" charset="utf-8">
-    setMainHeight();
-</script>
+<div id="change_password-modal">
+</div>
 
-<%= header_data do %>
-    Supports list:
-
-    <%= admin_area do %>
-        <%= link_to(image_tag('new-icon-24.png'), new_support_path, class: 'button') %>
-    <% end %>
-<% end %>
-
-<table>
-  <thead>
-      <tr>
-        <th>Login</th>
-        <%# if admin? %>
-            <th>Password</th>
-        <%# end %>
-        <th>First name</th>
-        <th>Last name</th>
-        <th>E-mail</th>
-        <th>Role</th>
-        <th colspan='3'>Actions</th>
-      </tr>
-  </thead>
-
-  <% @supports.each do |support| %>
-    <% role = @roles.find_by id: support.role_id %>
-    <%= render partial: 'supports/table_row', locals: {support: support, role: role} %>
-  <% end %>
-</table>
+<%= render partial: 'supports/index' %>
