Fix show/hide password form

--- a/app/views/supports/_change_password.html.erb
+++ b/app/views/supports/_change_password.html.erb
@@ -1,10 +1,10 @@
-<script type="text/javascript" charset="utf-8">
+<!--<script type="text/javascript" charset="utf-8">
     setMainHeight();
 </script>
 
-<%= header_data do %>
-    Change password for: <%= @support.login.upcase %>
-<% end %>
+<%#= header_data do %>
+    Change password for: <%#= @support.login.upcase %>
+<%# end %>-->
 
 <%= form_for @support, url: support_path(@support), method: :patch, remote: true do |f| %>
     <% if @support.errors.any? %>
