--- a/app/views/supports/_save.js.erb
+++ b/app/views/supports/_save.js.erb
@@ -1,2 +1,9 @@
-$("#main").html("<%= escape_javascript(render 'supports/index') %>");
-$("#change_password-modal").modal("hide");
+$("ul.errors").html("");
+<% if @product.errors.any? %>
+    <% @product.errors.full_messages.each do |message| %>
+        $("ul.errors").append($("<li />").html("<%= message.html_safe %>"));
+    <% end %>
+<% else %>
+    $("#main").html("<%= escape_javascript(render 'supports/index') %>");
+    $("#change_password-modal").modal("hide");
+<% end %>
