--- a/app/views/supports/_change_password.html.erb
+++ b/app/views/supports/_change_password.html.erb
@@ -1,24 +1,5 @@
-<!--<script type="text/javascript" charset="utf-8">
-    setMainHeight();
-</script>
-
-<%#= header_data do %>
-    Change password for: <%#= @support.login.upcase %>
-<%# end %>-->
-
 <%= form_for @support, url: support_path(@support), method: :patch, remote: true do |f| %>
-    <% if @support.errors.any? %>
-        <div id='error_explanation'>
-          <h2><%= pluralize(@support.errors.count, 'error') %> prohibited this support from being saved:</h2>
-          <ul>
-            <% @support.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-            <% end %>
-          </ul>
-        </div>
-    <% end %>
-
-    <table style="border-collapse: collapse;">
+    <table style="border-collapse: collapse;" class="ui-widget-content">
       <tr bgcolor="#faebd7" style="height: 30px;">
         <td align="right" style="font-weight: bold;">
           <%= f.label 'New password' %>
