--- a/app/views/supports/change_password.html.erb
+++ b/app/views/supports/change_password.html.erb
@@ -6,7 +6,7 @@
     Change password for: <%= @support.login.upcase %>
 <% end %>
 
-<%= form_for @support, url: support_path(@support), method: :patch, remote: true do |f| %>
+<%= form_for @support, url: support_path(@support), method: :patch do |f| %>
     <% if @support.errors.any? %>
         <div id='error_explanation'>
           <h2><%= pluralize(@support.errors.count, 'error') %> prohibited this support from being saved:</h2>
