--- a/app/views/supports/change_password.js.erb
+++ b/app/views/supports/change_password.js.erb
@@ -1,2 +1,18 @@
-$("#change_password-modal").html("<%= escape_javascript(render 'supports/change_password') %>");
-$("#change_password-modal").modal("show");
+//dlg = $("#change_password").dialog({
+//    autoOpen: false,
+//    width: 600,
+//    modal: true,
+//    title: 'Change password',
+//    buttons: {
+//        'Submit': function() {
+//            dlg.submit();
+//        }
+//    },
+//    open: function() {
+//        dlg.html("<%#= escape_javascript(render 'supports/change_password') %>");
+//    }
+//});
+
+$("#change_password").hide().after("<%= escape_javascript(render 'supports/change_password') %>");
+
+//dlg.dialog('open');
