--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -34,7 +34,7 @@
       <th>Owner</th>
       <th>Subject</th>
       <th>Problem</th>
-      <th colspan='3'>Actions</th>
+      <th width="60px">Actions</th>
     </tr>
     </thead>
 <% end %>
