--- a/app/views/supports/_index.html.erb
+++ b/app/views/supports/_index.html.erb
@@ -6,12 +6,9 @@
     Supports list:
 
     <%= admin_area do %>
-        <%= link_to(image_tag('new-icon-24.png'), new_support_path, class: 'button') %>
+        <%= link_to(image_tag('new-icon-24.png', alt: ''), new_support_path, class: 'button') %>
     <% end %>
 <% end %>
-
-<div id="change_password-modal">
-</div>
 
 <table>
   <thead>
@@ -24,7 +21,7 @@
     <th>Last name</th>
     <th>E-mail</th>
     <th>Role</th>
-    <th colspan='3'>Actions</th>
+    <th width="60px">Actions</th>
   </tr>
   </thead>
 
@@ -33,3 +30,6 @@
       <%= render partial: 'supports/table_row', locals: {support: support, role: role} %>
   <% end %>
 </table>
+
+<div id='change_password'>
+</div>
