--- a/app/views/supports/_table_row.html.erb
+++ b/app/views/supports/_table_row.html.erb
@@ -3,7 +3,7 @@
   <%# if admin? do %>
     <td>
       <%#= link_to image_tag('password-icon-16.png'), change_password_support_path(support) %>
-      <%= link_to image_tag('password-icon-16.png'), change_password_support_path(support), remote: true %>
+      <%= link_to image_tag('password-icon-16.png', alt: ''), change_password_support_path(support), remote: true %>
       <span><%= h support.password %></span>
     </td>
   <%# end %>
@@ -13,8 +13,8 @@
 
   <td><%= h role.name %></td>
 
-  <td align='center'><%= link_to image_tag('edit-icon.png'), edit_support_path(support) %></td>
-  <%# admin? %>
-    <td align='center'><%= link_to image_tag('delete-trash.png'), support_path(support), method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  <%# end %>
+  <td align='center'>
+    <%= link_to image_tag('edit-icon.png', alt: ''), edit_support_path(support) %>
+    <%= link_to image_tag('delete-trash.png', alt: ''), support_path(support), method: :delete, data: { confirm: 'Are you sure?' } %>
+  </td>
 </tr>
