--- a/app/views/ticket_states/index.html.erb
+++ b/app/views/ticket_states/index.html.erb
@@ -6,15 +6,15 @@
     Ticket states list:
 
     <%= admin_area do %>
-      <%= link_to(image_tag('new-icon-24.png'), new_ticket_state_path, class: 'button') %>
+      <%= link_to(image_tag('new-icon-24.png', alt: ''), new_ticket_state_path, class: 'button') %>
     <% end %>
 <% end %>
 
 <table>
   <thead>
   <tr>
-    <th width=80%>Name</th>
-    <th colspan='3'>Actions</th>
+    <th>Name</th>
+    <th width="40px">Actions</th>
   </tr>
   </thead>
 
@@ -23,10 +23,10 @@
       <tr class='<%= cycle('even', 'odd') %>'>
         <td><%= ticket_state.name %></td>
 
-        <td align='center'><%= link_to image_tag('edit-icon.png'), edit_ticket_state_path(ticket_state) %></td>
-        <%# if admin? %>
-          <td align='center'><%= link_to image_tag('delete-trash.png'), ticket_state, method: :delete, data: {confirm: 'Are you sure?'} %></td>
-        <%# end %>
+        <td align='center'>
+          <%= link_to image_tag('edit-icon.png', alt: ''), edit_ticket_state_path(ticket_state) %>
+          <%= link_to image_tag('delete-trash.png', alt: ''), ticket_state, method: :delete, data: {confirm: 'Are you sure?'} %>
+        </td>
       </tr>
   <% end %>
   </tbody>
