--- a/app/views/supports/_table_row.html.erb
+++ b/app/views/supports/_table_row.html.erb
@@ -1,4 +1,4 @@
-<tr class="<%= cycle('even', 'odd') %>">
+<tr class="<%= cycle('even', 'odd') %>" style="line-height: 20px;">
   <td><%= h support.login %></td>
   <%# if admin? do %>
     <td>
