--- a/app/views/supports/change_password.js.erb
+++ b/app/views/supports/change_password.js.erb
@@ -1,18 +1,17 @@
-//dlg = $("#change_password").dialog({
-//    autoOpen: false,
-//    width: 600,
-//    modal: true,
-//    title: 'Change password',
-//    buttons: {
-//        'Submit': function() {
-//            dlg.submit();
-//        }
-//    },
-//    open: function() {
-//        dlg.html("<%#= escape_javascript(render 'supports/change_password') %>");
-//    }
-//});
+dlg = $('#change_password_div').dialog({
+    autoOpen: false,
+    width: 600,
+    modal: true,
+    title: 'Change password',
+    buttons: {
+        'Submit': function() {
+            $('#edit_support_<%= @support.id %>').submit();
+            dlg.dialog( "close" );
+        }
+    },
+    open: function() {
+        dlg.html("<%= escape_javascript(render 'supports/change_password') %>");
+    }
+});
 
-$("#change_password").hide().after("<%= escape_javascript(render 'supports/change_password') %>");
-
-//dlg.dialog('open');
+dlg.dialog('open');
