--- a/app/views/tabs/index.html.erb
+++ b/app/views/tabs/index.html.erb
@@ -35,7 +35,7 @@
 
   <tbody>
   <% @tabs.each do |tab| %>
-      <tr class='<%= cycle('even', 'odd') %>'>
+      <tr class='<%= cycle('even', 'odd') %>' style="line-height: 20px;">
         <td><%= raw tab.name %></td>
 
         <td align="center">
