Modify change password logic and ajax support, but need some future edition to fix all bugs

--- a/app/views/supports/_change_password.html.erb
+++ b/app/views/supports/_change_password.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @support, url: support_path(@support), method: :patch, remote: true do |f| %>
+<%= form_for @support, url: change_password_support_path(@support), method: :patch, remote: true do |f| %>
     <table style="border-collapse: collapse;" class="ui-widget-content">
       <tr bgcolor="#faebd7" style="height: 30px;">
         <td align="right" style="font-weight: bold;">
