--- a/app/views/supports/new.html.erb
+++ b/app/views/supports/new.html.erb
@@ -6,87 +6,4 @@
     New support user:
 <% end %>
 
-<%= form_for :support, url: supports_path do |f| %>
-    <% if @support.errors.any? %>
-        <div id='error_explanation'>
-          <h2><%= pluralize(@support.errors.count, 'error') %> prohibited this support from being saved:</h2>
-          <ul>
-            <% @support.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-            <% end %>
-          </ul>
-        </div>
-    <% end %>
-
-    <table style="border-collapse: collapse;">
-      <tr bgcolor="#faebd7" style="height: 30px;">
-        <td align="right" style="font-weight: bold;">
-          <%= f.label :login %>
-        </td>
-        <td align="left" style="padding-left: 20px;">
-          <%= raw f.text_field :login, size: 40 %>
-        </td>
-      </tr>
-
-      <tr bgcolor="#faebd7" style="height: 30px;">
-        <td align="right" style="font-weight: bold;">
-          <%= f.label :password %>
-        </td>
-        <td align="left" style="padding-left: 20px;">
-          <%= raw f.password_field :password, size: 40 %>
-        </td>
-      </tr>
-
-      <tr bgcolor="#faebd7" style="height: 30px;">
-        <td align="right" style="font-weight: bold;">
-          <%= f.label :first_name %>
-        </td>
-        <td align="left" style="padding-left: 20px;">
-          <%= raw f.text_field :first_name, size: 40 %>
-        </td>
-      </tr>
-      <tr bgcolor="#faebd7" style="height: 30px;">
-        <td align="right" style="font-weight: bold;">
-          <%= f.label :last_name %>
-        </td>
-        <td align="left" style="padding-left: 20px;">
-          <%= raw f.text_field :last_name, size: 40 %>
-        </td>
-      </tr>
-
-      <tr bgcolor="#faebd7" style="height: 30px;">
-        <td align="right" style="font-weight: bold;">
-          <%= f.label 'E-mail' %>
-        </td>
-        <td align="left" style="padding-left: 20px;">
-          <%= raw f.text_field :email, size: 40 %>
-        </td>
-      </tr>
-
-      <tr bgcolor="#faebd7" style="height: 30px;">
-        <td align="right" style="font-weight: bold;">
-          <%= f.label :role %>
-        </td>
-        <td align="left" style="padding-left: 20px;">
-          <select name='selected_role'>
-            <% @roles.each do |role| %>
-                <% if role.name.downcase == 'guest' %>
-                    <option value="<%= role.id %>" selected>
-                <% else %>
-                    <option value="<%= role.id %>">
-                <% end %>
-                <%= role.name %>
-                </option>
-            <% end %>
-          </select>
-        </td>
-      </tr>
-
-      <tr bgcolor="#deb887" style="height: 30px">
-        <td></td>
-        <td align="right" style="padding-right: 20px">
-          <%= f.submit %>
-        </td>
-      </tr>
-    </table>
-<% end %>
+<%= render partial: 'supports/form' %>
