modify some request to simplify index view

--- a/app/views/supports/_table_row.html.erb
+++ b/app/views/supports/_table_row.html.erb
@@ -11,7 +11,7 @@
   <td><%= h support.last_name %></td>
   <td><%= h support.email %></td>
 
-  <td><%= h role.name %></td>
+  <td><%= h support.role.name %></td>
 
   <td align='center'>
     <%= link_to image_tag('edit-icon.png', alt: ''), edit_support_path(support) %>
