fix create action to use correct params

--- a/app/views/supports/change_password.js.erb
+++ b/app/views/supports/change_password.js.erb
@@ -10,7 +10,7 @@ dlg = $('#change_password_div').dialog({
         }
     },
     open: function() {
-        dlg.html("<%= escape_javascript(render 'supports/change_password') %>");
+        dlg.html("<%= escape_javascript(render partial: 'supports/change_password') %>");
     }
 });
 
