reorganize code for change password

--- a/app/views/layouts/contact.html.erb
+++ b/app/views/layouts/contact.html.erb
@@ -1,3 +1,7 @@
+<script type="text/javascript" charset="utf-8">
+    setMainHeight();
+</script>
+
 <header class="index_header">
   <span class="index_header_text">Contact information:</span>
 </header>
