--- a/app/views/supports/change_password.js.erb
+++ b/app/views/supports/change_password.js.erb
@@ -1,17 +1,1 @@
-dlg = $('#change_password_div').dialog({
-    autoOpen: false,
-    width: 600,
-    modal: true,
-    title: 'Change password',
-    buttons: {
-        'Submit': function() {
-            $('#edit_support_<%= @support.id %>').submit();
-            dlg.dialog( "close" );
-        }
-    },
-    open: function() {
-        dlg.html("<%= escape_javascript(render partial: 'supports/change_password') %>");
-    }
-});
-
-dlg.dialog('open');
+<%= escape_javascript( render 'supports/index' ) %>
