--- a/app/views/supports/index.html.erb
+++ b/app/views/supports/index.html.erb
@@ -6,7 +6,7 @@
     Supports list:
 
     <%= admin_area do %>
-        <%= link_to(image_tag('new-icon-24.png', alt: ''), new_support_path, class: 'button') %>
+        <%= link_to image_tag('new-icon-24.png', alt: ''), new_support_path, class: 'button' %>
     <% end %>
 
     <div id='change_password_div'>
