--- a/app/assets/stylesheets/normalize.css.scss
+++ b/app/assets/stylesheets/normalize.css.scss
@@ -15,7 +15,7 @@ html {
  * Remove default margin.
  */
 
-html,body,form,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,,p,blockquote,fieldset,input {
+html,body,form,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,p,blockquote,fieldset,input {
   margin: 0;
   padding: 0;
 }
